[gd_scene load_steps=2 format=3 uid="uid://b0m8v1rcrr2ky"]

[ext_resource type="Script" path="res://Scenes/Main.gd" id="1_aufcq"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aufcq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -164.0
offset_top = -76.0
offset_right = 175.0
offset_bottom = 116.0
grow_horizontal = 2
grow_vertical = 2

[node name="LoginStateLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Not Logged in"

[node name="Register Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Register"

[node name="Login Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Login"

[connection signal="pressed" from="VBoxContainer/Register Button" to="." method="_on_register_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Login Button" to="." method="_on_login_button_pressed"]
